Cập nhật thời gian chờ cho các yêu cầu API từ 30 lên 60 giây và cải thiện cơ chế xử lý lỗi với khả năng thử lại khi gặp timeout trong quá trình tạo và kiểm tra trạng thái video. Thay đổi cấu hình thư mục đầu ra và kích thước cửa sổ trong tệp cấu hình.

--- a/heygen_config.json
+++ b/heygen_config.json
@@ -1,16 +1,16 @@
 {
     "api_keys": [
-        "NzJlNGVlZDg2MzRlNGVkYWIwMTBiNWQyMDE3ZWY4OTgtMTc0NjUyODc0OQ==",
-        "NDgwMGQwYTA5YmJlNDk4NWI3YjgyODliZDNlMmIxYjAtMTc0NjQyODEwOQ==",
-        "ZjkzMjdjN2ZhNzYyNGFhYjllMWU3NjA3Y2U1MzgzMzItMTc0NjQyODE5NA==",
-        "OTI4ZWE1M2RiNjljNGE4YThkMWQyMzJjNzE5MmZjYjctMTc0NjQyODI1Mw==",
-        ""
+        "Y2MxMGU5N2NkYmM2NDllOWFlOTg2MTJiNGU3NmM0MjMtMTc0NzIyNjQwOA==",
+        "ZjY5ODhlMzA3MmI2NDU0N2FhNTFiZmY0ZmIxYWJjM2ItMTc0NzIzMDk5OA==",
+        "ZWE5MzUwZjZmYzFjNDhmYjlmMzQ3ZWVlNjA1ZTFhNjMtMTc0NzIzMTA0Ng==",
+        "MDQ0YzhkZTkzZTI3NGEyYmIxNjU5ZGRlMjQ2ZDAzMGEtMTc0NzIzMTA5Ng==",
+        "ODhlYTFjMjNkZjdjNGZjMTkyY2UxODAxNTkxZGNjZjQtMTc0NzIzMTE0Mg=="
     ],
     "avatar_id": "Conrad_standing_house_front",
-    "output_dir": "G:/Work/MMO/1. Wildlife/179",
+    "output_dir": "G:/Work/MMO/1. Wildlife/204",
     "proxy": {
         "http": "",
         "https": ""
     },
-    "window_geometry": "850x818+79+79"
+    "window_geometry": "850x818+2030+-426"
 }
